library/database_universe/test/errors/property/reserved_name.dart
// reserved keyword

import 'package:database_universe/database_universe.dart';

@collection
class Model {
  late int id;

  String? prop1;

  String? unique;
}
